// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddModerator renders correctly when adding with suggestions 1`] = `
<div
  data-styleName="add-moderator adding"
>
  <div
    data-styleName="help-text"
  >
    Search here for members to grant moderator powers
  </div>
  <div
    data-styleName="input-row"
  >
    <input
      data-styleName="input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Type..."
      type="text"
    />
    <span
      data-styleName="cancel-button"
      onClick={[Function]}
    >
      Cancel
    </span>
    <span
      data-styleName="add-button"
      onClick={[Function]}
    >
      Add
    </span>
  </div>
  <div
    style={
      Object {
        "width": NaN,
      }
    }
  >
    <KeyControlledItemList
      items={
        Array [
          Object {
            "id": 1,
            "name": "Demeter",
          },
          Object {
            "id": 2,
            "name": "Ares",
          },
          Object {
            "id": 1,
            "name": "Hermes",
          },
        ]
      }
      onChange={[Function]}
      theme={Object {}}
    />
  </div>
</div>
`;

exports[`AddModerator renders correctly, and transitions from not adding to adding 1`] = `
<div
  data-styleName="add-moderator add-new"
  onClick={[Function]}
>
  + Add New
</div>
`;

exports[`AddModerator renders correctly, and transitions from not adding to adding 2`] = `
<div
  data-styleName="add-moderator adding"
>
  <div
    data-styleName="help-text"
  >
    Search here for members to grant moderator powers
  </div>
  <div
    data-styleName="input-row"
  >
    <input
      data-styleName="input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Type..."
      type="text"
    />
    <span
      data-styleName="cancel-button"
      onClick={[Function]}
    >
      Cancel
    </span>
    <span
      data-styleName="add-button"
      onClick={[Function]}
    >
      Add
    </span>
  </div>
</div>
`;

exports[`ModeratorControl renders correctly 1`] = `
<div
  data-styleName="moderator-control"
>
  <Link
    replace={false}
    to="/c/foo/m/7"
  >
    <RoundImage
      data-styleName="avatar"
      medium={true}
      url="zeus.png"
    />
  </Link>
  <Link
    data-styleName="name"
    replace={false}
    to="/c/foo/m/7"
  >
    Zeus
  </Link>
  <span
    data-styleName="remove-button"
    onClick={[Function]}
  >
    Remove
  </span>
</div>
`;

exports[`ModeratorsSettingsTab renders a list of ModeratorControls and AddModerator 1`] = `
<div>
  <div>
    <ModeratorControl
      moderator={
        Object {
          "id": 1,
        }
      }
    />
    <ModeratorControl
      moderator={
        Object {
          "id": 2,
        }
      }
    />
    <ModeratorControl
      moderator={
        Object {
          "id": 3,
        }
      }
    />
    <ModeratorControl
      moderator={
        Object {
          "id": 4,
        }
      }
    />
  </div>
  <AddModerator />
</div>
`;

exports[`ModeratorsSettingsTab renders loading if no moderators 1`] = `<Loading />`;
